# Changelog

## Version  3.4.1

* Fixing #102 color space and HDR details not parsed from webm correctly (thanks to leonardyan)

## Version  3.4.0

* Adding #83 HDR10+ support for x265 (thanks to SlashX)
* Adding x265 params hdr10, hdr10-opt, aq-mode and repeat-headers
* Adding basic splash info and waiting cursor for events
* Adding button to open config file from setting panel
* Changing that autocrop will test two spots if possible (thanks to HannesJo0139)
* Changing covers generated in their own temp directory
* Fixing #103 x265-params were being pre-pended with an extra ":" (thanks to Zeid164)
* Fixing #101 FFmpeg status codes now taken into account for errors

## Version  3.3.1

* Fixing #96 input selection did not support all video formats
* Fixing #95 unicode decode error for FFmpeg output

## Version  3.3.0

* Adding ETA and size estimates on status panel
* Adding custom x265-params options
* Adding support for WebP encodings
* Changing height to say "Auto" when keeping aspect ratio
* Changing that buttons will be disabled without video or when encoding
* Fixing cover extraction could timeout and crash program
* Fixing #89 x265 params for hdr10 changed names (thanks to SlashX)
* Fixing #92 cannot start FastFlix on Mac (thanks to Paul Bakaus)
* Fixing autocrop sometimes failing due to muxing size limitations
* Fixing thumbnail generation did not work for videos with multiple video tracks
* Fixing gif generation to work with new filter_complex
* Fixing gif output network location would not work

## Version  3.2.1

* Fixing #87 psutil not listed as requirement for pip (thanks to I-Iawk)

## Version  3.2.0

* Adding #75 burn-in subtitle support (thanks to Trevbams)
* Adding #81 auto crop feature (thanks to HannesJo0139)
* Adding #84 pause / resume functionality (thanks to loungebob)
* Adding hover info for Audio and Subtitle tracks
* Adding confirm overwrite dialog if file already exists and is not empty
* Adding linking to issues in changelog file