@@ -3,6 +3,7 @@
 ## Version  3.4.1
 
 * Fixing #102 color space and HDR details not parsed from webm correctly (thanks to leonardyan)
+* Fixing no warning messages for HDR10+ experimental feature
 
 ## Version  3.4.0
 
